// Copyright 2019 SolarNetwork Foundation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package solarnetwork.esi.domain;

option cc_enable_arenas = true;
option java_multiple_files = true;
option java_outer_classname = "DerFacilityRegistrationProto";
option java_package = "net.solarnetwork.esi.domain";
option objc_class_prefix = "ESI";

import "solarnetwork/esi/domain/der_route.proto";

// A completed DerFacility registration result.
message DerFacilityRegistration {

  // The routing information.
  DerRoute route = 1;
  
  // Success flag.
  bool success = 2;
  
  // A token formed as SHA256(operatorNonce + facilityNonce + operatorUid 
  //                          + facilityUid + facilityUri)
  //
  // The `operatorNonce` was previously provided via the
  // `DerFacilityRegistrationFormDataReceipt` returned from a call to
  // `DerOperatorService.SubmitDerFacilityRegistrationForm()`. All other values
  // were previously provided on the `DerFacilityRegistrationFormData` passed to
  // that method.
  bytes registrationToken = 3;

}
